--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/kevin/Desktop/Leap/LeapDeveloperKit_2.2.2+24469_linux/LeapSDK/lib/x64"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="src/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="src/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/home/kevin/Desktop/Leap/LeapDeveloperKit_2.2.2+24469_linux/LeapSDK/lib/LeapJava.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
