--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,4 @@
-/Testing
-/gpBase
-/gtefpBlocks
-/gtefpMain
-/hamcrest-core-1.3.jar
-/junit-4.12.jar
-/queues
-/util
+/leap/
+/Testing/
+/gtefpBlocks/
+/gtefpMain/
