--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="src/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="src/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="/home/kevin/Desktop/Leap/LeapDeveloperKit_2.2.2+24469_linux/LeapSDK/lib/LeapJava.jar"/>
+	<classpathentry kind="lib" path="E:/LeapJava.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
