--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,9 @@
-/gpBase
-/util
-/gtefpBlocks
-/gtefpMain
+/Testing/
+/gpBase/
+/gtefpBlocks/
+/gtefpMain/
+/hamcrest-core-1.3.jar
+/junit-4.12.jar
+/leap/
+/queues/
+/util/
