Added GlobalConsts class, made the _after Sockets private.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,4 @@
-/Testing/
-/gpBase/
-/gtefpBlocks/
-/gtefpMain/
-/hamcrest-core-1.3.jar
-/junit-4.12.jar
-/leap/
-/queues/
-/util/
+/gtefpBlocks
+/gtefpMain
+/util
+/Testing
