--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,11 @@
-/util
-/gtefpMain
-/gpBase
+/CountLines.py
+/Testing/
+/gpBase/
+/gtefpBlocks/
+/gtefpMain/
+/hamcrest-core-1.3.jar
+/junit-4.12.jar
+/leap/
+/queues/
+/util/
+/writeSaveLoad.py
