--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="W:/Downloads/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="W:/Downloads/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
